add dhl developer portal link

--- a/docs/de-de/modules/fulfillment/pages/plugin-dhl-shipping-versenden.adoc
+++ b/docs/de-de/modules/fulfillment/pages/plugin-dhl-shipping-versenden.adoc
@@ -599,7 +599,7 @@ Beachte außerdem, dass die Funktion *Versenden* für diese Benutzer:innen im DH
 
 Standardmäßig ist der Produktivmodus im *DHL Shipping (Versenden)*-Plugin aktiviert. Du kannst den Testmodus für das Plugin aktivieren, um die Einstellungen zu prüfen.
 
-*_Wichtig:_* Zum Testen benötigst du Zugangsdaten zu einem Test-Account (DHL Entwicklerportal).
+*_Wichtig:_* Zum Testen benötigst du Zugangsdaten zu einem Test-Account. Weitere Informationen sowie die Testzugangsdaten findest du im link:https://entwickler.dhl.de/group/ep/wsapis/geschaeftskundenversand/current/authentifizierung[DHL Entwicklerportal^].
 
 Gehe wie im Folgenden beschrieben vor, um den Testmodus für das Plugin zu aktivieren.
 
