--- a/docs/en-gb/modules/fulfilment/pages/plugin-dhl-shipping-versenden.adoc
+++ b/docs/en-gb/modules/fulfilment/pages/plugin-dhl-shipping-versenden.adoc
@@ -590,7 +590,7 @@ Note that the function *Ship* has to be activated for the user in the DHL busine
 
 By default, the productive mode is activated in the *DHL Shipping (Versenden)* plugin. You can activate the test mode for the plugin in order to check the settings.
 
-*_Important:_* In order to be able to test the settings, login details for a test account (DHL developer portal) are required.
+*_Important:_* In order to be able to test the settings, login details for a test account are required. For further information and the login details of the test account, refer to the link:https://entwickler.dhl.de/group/ep/wsapis/geschaeftskundenversand/current/authentifizierung[DHL developer portal^].
 
 Proceed as described below to activate the test mode for the plugin.
 
