ADD user right return label

--- a/docs/de-de/modules/automatisierung/pages/aktionen.adoc
+++ b/docs/de-de/modules/automatisierung/pages/aktionen.adoc
@@ -1801,6 +1801,20 @@ Verfügbare Subaktionen für diese Aktion:
 
 Mit der Aktion **Retourenetikett** wird das Etikett zu einer Retoure per Subaktion automatisch zum Beispiel gedruckt oder gespeichert.
 
+[IMPORTANT]
+.Rechte erforderlich
+====
+Damit die Aktion *Retourenetikett* korrekt funktioniert, wenn Benutzer:innen ohne Admin-Rechte einen Prozess starten, der die Aktion beinhaltet, müssen diese Benutzer:innen über die unten aufgelistete Berechtigung verfügen.
+====
+
+[discrete]
+==== Rechte für Backend-Benutzer:innen vergeben
+
+:rights-purpose: pass:quotes[die Aktion *Retourenetikett* ausführen können]
+:right-one: pass:quotes[*Aufträge > Versand > Retourenlabel > Anzeigen*]
+
+include::_includes:partial$rights.adoc[]
+
 [.subhead]
 Arbeitsschritte
 
