--- a/docs/en-gb/modules/automation/pages/procedures.adoc
+++ b/docs/en-gb/modules/automation/pages/procedures.adoc
@@ -1801,6 +1801,20 @@ The following sub-procedures are available for this procedure:
 
 Use the **Return label** procedure along with a sub-procedure to automatically print or save a return label.
 
+[IMPORTANT]
+.User rights required
+====
+For the *Return label* procedure to work correctly if a process containing this procedure is started by a user without admin rights, these users must be assigned the right listed below.
+====
+
+[discrete]
+==== Assigning rights for back end users
+
+:rights-purpose: pass:quotes[execute the *Return label* procedure]
+:right-one: pass:quotes[*Orders > Shipping > Return label > Show*]
+
+include::_includes:partial$rights.adoc[]
+
 [.subhead]
 Work steps
 
