Added info about complex mappings, added images (#799)
* Added info about complex mappings, added images

* Added translations

* Some corrections

* Some corrections

* Minor corrections

--- a/docs/en-gb/modules/markets/partials/kaufland-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/kaufland-recommended-mappings.adoc
@@ -65,16 +65,37 @@ a| The processing time in days.
 
 * Property of the type *Int* (whole number)
 
+3+a| Warehouses +
+*_Note:_* In the Kaufland catalogues, the mappings for *warehouses* are shown for every Kaufland account. Make sure that you map the data fields for the correct Kaufland account, i.e. the Kaufland account for which you want to use this catalogue. +
+The name and the ID of the Kaufland account are displayed above the mappings: *Account name (ID: account ID)*.
+
+image::markets:kaufland-kontoname-lager.png[]
+
 | id_warehouse
 | yes
-| The ID of the Kaufland warehouse. +
-* Property of the type *Selection* or *Whole number*
+| Here you map Kaufland warehouses. This data field contains a complex mapping. This means that you can select from different values of the marketplace data field. In this case, the values are your Kaufland warehouses. The values are then assigned to a plentymarkets data field. In this case, you have to use a property. +
+For *id_warehouse*, you first select the Kaufland warehouse and then assign a property. +
+*_Note:_* The ID of the Kaufland warehouse is shown here. +
+
+recommended mapping:
+
+* Property of the type *Selection* +
+*_Tip:_* For example, you can use the names of your Kaufland warehouses as selection values for the property.
+
+3+a| Shipping profiles +
+*_Note:_* In the Kaufland catalogues, the mappings for *shipping profiles* are shown for every Kaufland account. Make sure that you map the data fields for the correct Kaufland account, i.e. the Kaufland account for which you want to use this catalogue. +
+The name and the ID of the Kaufland account are displayed above the mappings: *Account name (ID: account ID)*.
+
+image::markets:kaufland-kontoname-versandprofil.png[]
 
 | id_shipping_group
 | yes
-a| The ID of the shipping group.
+a| Here you assign Kaufland shipping groups to your shipping profiles in plentymarkets. This data field contains a complex mapping. This means that you can select from different values of the marketplace data field. The values are then assigned to a plentymarkets data field. For *id_shipping_group*, first select the Kaufland shipping group and then assign the desired plentymarkets shipping profile. +
+*_Note:_* The ID of the Kaufland shipping group is shown here. +
 
-* Property of the type *Selection* or *Whole number*
+recommended mapping:
+
+* *Shipping profile »* [Select shipping profile]
 
 3+| Product data +
 *_Note:_* This data are required to create new products on Kaufland. The data which can be linked here differ in each product category.
