UPDATE uploaded docs

--- a/docs/de-de/modules/automatisierung/pages/aktionen.adoc
+++ b/docs/de-de/modules/automatisierung/pages/aktionen.adoc
@@ -1140,7 +1140,7 @@ Verfügbare Subaktionen für diese Aktion:
 [#uploaded-docs]
 ==== Hochgeladene Dokumente
 
-Mit der Aktion *Hochgeladene Dokumente* können hochgeladene Dokumente deiner Wahl per Subaktion automatisch zum Beispiel gedruckt oder gespeichert werden. Diese Aktion eignet sich für nicht auftragsbezogene Dokumente.
+Mit der Aktion *Hochgeladene Dokumente* können alle hochgeladenen Dokumente für einen Auftrag per Subaktion automatisch zum Beispiel gedruckt oder gespeichert werden. Diese Aktion eignet sich für nicht auftragsbezogene Dokumente.
 
 [.subhead]
 Arbeitsschritte
@@ -1153,21 +1153,7 @@ Die Aktion steht für folgende Arbeitsschritte zur Verfügung:
 [.subhead]
 Einstellungen
 
-<<table-procedure-uploaded-docs>> erläutert die zusätzlichen Einstellungen der Aktion. Informationen zu den allgemeinen Einstellungen für Aktionen findest du in <<table-procedures-general-settings>>.
-
-[[table-procedure-uploaded-docs]]
-.Aktion *Hochgeladene Dokumente*
-[cols="1,3"]
-|====
-|Einstellung |Erläuterung
-
-| *Alle* (Standardeinstellung)
-|Es werden alle hochgeladenen Dokumente gewählt und an die Subaktion weitergegeben. Momentan können lediglich Dateien im PDF-Format gewählt werden.
-
-| *Auswahl*
-|Wähle die gewünschten Dokumente, für die die Subaktion ausgeführt werden soll. Momentan können lediglich Dateien im PDF-Format gewählt werden.
-
-|====
+Für diese Aktion sind keine zusätzlichen Einstellungen verfügbar. Informationen zu den allgemeinen Einstellungen für Aktionen findest du in <<table-procedures-general-settings>>.
 
 [.subhead]
 Aktionen für Fehlerfall
