update new icons

--- a/docs/de-de/modules/fulfillment/pages/package-content-list-2-0.adoc
+++ b/docs/de-de/modules/fulfillment/pages/package-content-list-2-0.adoc
@@ -9,7 +9,7 @@ Das Menü *Aufträge » Paketinhaltsliste 2.0* ist wie folgt aufgebaut:
 
 image::fulfillment:pcl-2-0-menu-overview-de.png[width=640, height=360]
 
-* *Navigation*: Hier navigierst du durch die einzelnen Bereiche des Menüs. Der aktuell ausgewählte Bereich (blaue Schrift) wird im Hauptfenster rechts angezeigt. Klicke auf icon:bars[], um die Navigationsleiste ein- und auszublenden. +
+* *Navigation*: Hier navigierst du durch die einzelnen Bereiche des Menüs. Der aktuell ausgewählte Bereich (blaue Schrift) wird im Hauptfenster rechts angezeigt. Klicke auf material:menu[], um die Navigationsleiste ein- und auszublenden. +
 * *Toolbar*: Hier kannst du nach Aufträgen <<#search-orders, suchen>>, die <<#customise-columns, Übersicht individuell gestalten>>, die Ergebnisse pro Seite, die du angezeigt haben möchtest, einstellen und durch die Seiten mit den Aufträgen klicken. +
 * *Hauptfenster*: Hier wird der aktuell geöffnete Bereich angezeigt.
 ** *Übersicht*: Wenn du eine Suche ausführst, siehst du die Ergebnisse in einer Übersicht. Die Übersicht liefert auf einen Blick Informationen zu den gefundenen Aufträgen. Zum Beispiel siehst du den Auftragstyp, die Anzahl der Artikel im Auftrag oder den Status des Auftrags.
@@ -42,16 +42,16 @@ include::_includes:page$rechte.adoc[]
 [#search-orders]
 == Aufträge suchen
 
-In der Übersicht der Paketinhaltsliste 2.0 kannst du alle Aufträge in einer Liste öffnen oder du wählst Filter (icon:tune[set=material]), um die Suchergebnisse einzugrenzen.
+In der Übersicht der Paketinhaltsliste 2.0 kannst du alle Aufträge in einer Liste öffnen oder du wählst Filter (material:tune[]), um die Suchergebnisse einzugrenzen.
 
 [.instruction]
 Aufträge in der Paketinhaltsliste suchen:
 
 . Öffne das Menü *Aufträge » Paketinhaltsliste 2.0*.
-.. *_Möglichkeit 1_*: Klicke auf icon:search[set=material], um direkt eine Liste aller Aufträge zu sehen.
+.. *_Möglichkeit 1_*: Klicke auf material:search[], um direkt eine Liste aller Aufträge zu sehen.
 .. *_Möglichkeit 2_*: Gib eine Auftrags-ID in das Suchfeld ein und klicke auf den automatischen Vorschlag.
-Klicke dann auf icon:search[set=material], um die Suche auszuführen.
-.. *_Möglichkeit 3_*: Klicke auf icon:tune[set=material], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen. Beachte die Erläuterungen zu den Filtern in <<#table-search-orders>>.
+Klicke dann auf material:search[], um die Suche auszuführen.
+.. *_Möglichkeit 3_*: Klicke auf material:tune[], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen. Beachte die Erläuterungen zu den Filtern in <<#table-search-orders>>.
 . Wenn du die Suche ausführst, siehst du die Ergebnisliste.
 
 [[image-example-search-field]]
@@ -80,17 +80,17 @@ Wenn du eine Suche ausführst, siehst du deine gewählten Filter oben als Chips 
 Aktuellen Filter speichern:
 
 . Führe eine Suche mit einem oder mehreren der in <<#table-search-orders>> aufgelisteten Filter aus.
-. Klicke auf *Gespeicherte Filter* (icon:bookmarks[set=material]).
-. Klicke auf icon:bookmark_border[set=material] *Aktuellen Filter speichern*.
+. Klicke auf *Gespeicherte Filter* (material:bookmarks[]).
+. Klicke auf material:bookmark_border[] *Aktuellen Filter speichern*.
 . Gib einen Namen für den Filter ein.
 . Entscheide, ob
-** dieser <<#filter-als-standard, Filter als Standard>> festgelegt werden soll (icon:toggle_on[set=material, role=skyBlue])
-** dieser Filter für alle Benutzer:innen erstellt werden soll (icon:toggle_on[set=material, role=skyBlue]).
+** dieser <<#filter-als-standard, Filter als Standard>> festgelegt werden soll (material:toggle_on[role=skyBlue])
+** dieser Filter für alle Benutzer:innen erstellt werden soll (material:toggle_on[role=skyBlue]).
 . Klicke auf *SPEICHERN*. +
-→ Der Filter erscheint nun unter *Gespeicherte Filter* (icon:bookmarks[set=material]).
+→ Der Filter erscheint nun unter *Gespeicherte Filter* (material:bookmarks[]).
 
 [TIP]
-Lege die Reihenfolge der Filter per Drag-and-drop mit einem Klick auf *Verschieben* (icon:drag_indicator[set=material]) fest. Klicke auf icon:delete[set=material], um einen Filter zu löschen.
+Lege die Reihenfolge der Filter per Drag-and-drop mit einem Klick auf *Verschieben* (material:drag_indicator[]) fest. Klicke auf material:delete[], um einen Filter zu löschen.
 
 [#gespeicherte-filter-anwenden]
 === Gespeicherte Filter anwenden
@@ -98,7 +98,7 @@ Lege die Reihenfolge der Filter per Drag-and-drop mit einem Klick auf *Verschieb
 [.instruction]
 Gespeicherte Filter anwenden:
 
-. Klicke auf *Gespeicherte Filter* (icon:bookmarks[set=material]).
+. Klicke auf *Gespeicherte Filter* (material:bookmarks[]).
 . Klicke auf einen bereits erstellten Filter. +
 → Die Suche wird ausgeführt und die verwendeten Filtereinstellungen werden oben als Chips dargestellt.
 
@@ -113,9 +113,9 @@ Du kannst einen Filter direkt beim Erstellen als Standard festlegen wie im Kapit
 .Filter als Standard festlegen
 image::fulfillment:package-content-list-default-filter.png[width=640, height=360]
 
-Klicke in der Zeile des gespeicherten Filters auf icon:star_border[set=material] *Als Standard festlegen*.
+Klicke in der Zeile des gespeicherten Filters auf material:star_border[] *Als Standard festlegen*.
 
-Wenn du einen anderen Filter als Standard festlegen möchtest, deaktiviere den aktuell gewählten Standardfilter mit einem Klick auf icon:star[set=material] *Nicht als Standard verwenden*.
+Wenn du einen anderen Filter als Standard festlegen möchtest, deaktiviere den aktuell gewählten Standardfilter mit einem Klick auf material:star[] *Nicht als Standard verwenden*.
 
 [#customise-columns]
 === Übersicht individuell gestalten
@@ -126,11 +126,11 @@ Du kannst die Übersicht an deine Bedürfnisse anpassen.
 |====
 |Symbol |Erläuterung
 
-| icon:settings[set=material]
+| material:settings[]
 |Welche Spalten sollen in der Übersicht enthalten sein?
 
-. Klicke auf *Spalten konfigurieren* (icon:settings[set=material]).
-. Wähle alle von dir gewünschten Spalten (icon:check_box[set=material, role=skyBlue]).
+. Klicke auf *Spalten konfigurieren* (material:settings[]).
+. Wähle alle von dir gewünschten Spalten (material:check_box[role=skyBlue]).
 . Klicke auf *Bestätigen*.
 
 [.collapseBox]
@@ -145,28 +145,28 @@ Du kannst die Übersicht an deine Bedürfnisse anpassen.
 
 --
 
-| icon:drag_indicator[set=material]
+| material:drag_indicator[]
 |In welcher Reihenfolge sollen die Spalten angezeigt werden?
 
-. Klicke auf *Spalten konfigurieren* (icon:settings[set=material]).
-. Bewege deinen Mauszeiger über einen Eintrag mit dem Symbol icon:drag_indicator[set=material]. +
-→ Dein Mauszeiger ändert seine Form (icon:open_with[set=material]).
+. Klicke auf *Spalten konfigurieren* (material:settings[]).
+. Bewege deinen Mauszeiger über einen Eintrag mit dem Symbol material:drag_indicator[]. +
+→ Dein Mauszeiger ändert seine Form (material:open_with[]).
 . Ziehe den Eintrag an die gewünschte Stelle.
 . Klicke auf *Bestätigen*.
 
-| icon:arrow_downward[set=material] / icon:arrow_upward[set=material]
+| material:arrow_downward[] / material:arrow_upward[]
 |Sollen die Ergebnisse in aufsteigender oder in absteigender Reihenfolge angezeigt werden?
 
 . Bewege deinen Mauszeiger über eine Spaltenüberschrift. +
 → Ein Pfeil wird angezeigt. +
 *_Hinweis:_* Nicht alle Spaltenüberschriften können sortiert werden.
-. Klicke auf icon:arrow_downward[set=material] oder icon:arrow_upward[set=material], um die Sortierreihenfolge zu ändern.
+. Klicke auf material:arrow_downward[] oder material:arrow_upward[], um die Sortierreihenfolge zu ändern.
 |====
 
 [#gruppenfunktion-nutzen]
 == Gruppenfunktionen nutzen
 
-Wenn du in der Übersicht der Paketinhaltsliste 2.0 einen Auftrag wählst (icon:check_box[set=material, role=skyBlue]), werden die weiteren Optionen (icon:more_vert[set=material]) sichtbar, die verschiedene Gruppenfunktionen enhalten. Öffnest du einen Auftrag und wählst mehrere Pakete oder Paletten, stehen dir in der Detailansicht weitere Gruppenfunktionen zur Verfügung. In <<#table-group-functions>> sind die Bedienelemente der Gruppenfunktionen sowie deren Erläuterungen aufgeführt.
+Wenn du in der Übersicht der Paketinhaltsliste 2.0 einen Auftrag wählst (material:check_box[role=skyBlue]), werden die weiteren Optionen (material:more_vert[]) sichtbar, die verschiedene Gruppenfunktionen enhalten. Öffnest du einen Auftrag und wählst mehrere Pakete oder Paletten, stehen dir in der Detailansicht weitere Gruppenfunktionen zur Verfügung. In <<#table-group-functions>> sind die Bedienelemente der Gruppenfunktionen sowie deren Erläuterungen aufgeführt.
 
 [[table-group-functions]]
 .Gruppenfunktion in der Paketinhaltsliste 2.0 nutzen
@@ -176,47 +176,47 @@ Wenn du in der Übersicht der Paketinhaltsliste 2.0 einen Auftrag wählst (icon:
 
 2+^|*Gruppenfunktionen in der Auftragsübersicht*
 
-|icon:receipt_long[set=material] *CSV-Datei exportieren*
+| material:receipt_long[] *CSV-Datei exportieren*
 |Exportiert die Inhalte der gewählten Aufträge als CSV-Datei.
 
-|icon:lock[set=material] *Alle Paletten schließen*
+| material:lock[] *Alle Paletten schließen*
 |Schließt alle Paletten der gewählten Aufträge. +
 *_Beachte:_* Sobald eine Palette geschlossen ist, kann diese nicht weiter bearbeitet werden.
 
-|icon:lock[set=material] *Alle Pakete schließen*
+| material:lock[] *Alle Pakete schließen*
 |Schließt alle Pakete der gewählten Aufträge. +
 *_Beachte:_* Sobald ein Paket geschlossen ist, kann dieses nicht weiter bearbeitet werden.
 
-|icon:delete[set=material] *Alle Paletten löschen*
+| material:delete[] *Alle Paletten löschen*
 |Löscht alle Paletten der gewählten Aufträge.
 
-|icon:delete[set=material] *Alle Pakete löschen*
+| material:delete[] *Alle Pakete löschen*
 |Löscht alle Pakete der gewählten Aufträge.
 
 2+^|*Gruppenfunktionen in der Detailansicht eines Auftrags*
 
-|icon:dynamic_feed[set=material] *Schnelles Packen*
+| material:dynamic_feed[] *Schnelles Packen*
 |Ermöglicht das gleichzeitige Packen mehrerer Pakete im Auftrag.
 
-|icon:settings[set=material] *Paket(e) konfigurieren*
+| material:settings[] *Paket(e) konfigurieren*
 |Konfiguriert die gewählten Pakete des Auftrags.
 
-|icon:settings[set=material] *Palette(n) konfigurieren*
+| material:settings[] *Palette(n) konfigurieren*
 |Konfiguriert die gewählten Paletten des Auftrags.
 
-|icon:table_rows[set=material] *Paket(e) auf Palette stellen*
+| material:table_rows[] *Paket(e) auf Palette stellen*
 |Stellt die gewählten Pakete des Auftrags auf eine Palette.
 
-|icon:lock[set=material] *Paket(e) schließen*
+| material:lock[] *Paket(e) schließen*
 |Schließt die gewählten Pakete des Auftrags.
 
-|icon:lock[set=material] *Palette(n) schließen*
+| material:lock[] *Palette(n) schließen*
 |Schließt die gewählten Paletten des Auftrags.
 
-|icon:delete[set=material] *Paket(e) löschen*
+| material:delete[] *Paket(e) löschen*
 |Löscht die gewählten Pakete des Auftrags.
 
-|icon:delete[set=material] *Palette(n) löschen*
+| material:delete[] *Palette(n) löschen*
 |Löscht die gewählten Paletten des Auftrags.
 
 |====
@@ -240,13 +240,13 @@ Auftragsinhalte als CSV-Datei exportieren:
 . Suche den Auftrag anhand der Filtereinstellungen. Beachte dazu die Erläuterungen in <<#search-orders, Aufträge suchen>>. +
 → Die Aufträge, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen.
-. Klicke oben auf icon:receipt_long[set=material] *Auftragsinhalte als CSV-Datei exportieren*. +
+. Klicke oben auf material:receipt_long[] *Auftragsinhalte als CSV-Datei exportieren*. +
 → Die Auftragsinhalte werden als CSV-Datei exportiert.
 
 [TIP]
 .Inhalte mehrerer Aufträge als CSV-Datei exportieren
 ======
-Möchtest du die Inhalte mehrerer Aufträge als CSV-Datei exportieren, setze in der Übersicht neben allen gewünschten Aufträgen ein Häkchen (icon:check_box[set=material, role=skyBlue]). Klicke anschließend oben auf icon:receipt_long[set=material] *Auftragsinhalte als CSV-Datei exportieren*. Die Inhalte aller gewählten Aufträge werden dann gesammelt in einer CSV-Datei exportiert.
+Möchtest du die Inhalte mehrerer Aufträge als CSV-Datei exportieren, setze in der Übersicht neben allen gewünschten Aufträgen ein Häkchen (material:check_box[role=skyBlue]). Klicke anschließend oben auf material:receipt_long[] *Auftragsinhalte als CSV-Datei exportieren*. Die Inhalte aller gewählten Aufträge werden dann gesammelt in einer CSV-Datei exportiert.
 ======
 
 [#work-with-pallets]
@@ -268,12 +268,12 @@ Palette erstellen:
 . Suche den Auftrag anhand der Filtereinstellungen. Beachte dazu die Erläuterungen in <<#search-orders, Aufträge suchen>>. +
 → Die Aufträge, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen.
-. Klicke oben auf icon:add[set=material] *Inhalt hinzufügen*.
+. Klicke oben auf material:add[] *Inhalt hinzufügen*.
 . Wähle die Option *Palette erstellen*. +
-*_Oder:_* Klicke links in der Navigation neben dem Auftrag auf die weiteren Optionen (icon:more_vert[set=material]) und wähle die Option icon:add[set=material] *Transporteinheit erstellen* > icon:add[set=material] *Palette erstellen*. +
+*_Oder:_* Klicke links in der Navigation neben dem Auftrag auf die weiteren Optionen (material:more_vert[]) und wähle die Option material:add[] *Transporteinheit erstellen* > material:add[] *Palette erstellen*. +
 → Das Fenster *Neue Palette erstellen* wird geöffnet.
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<#table-create-new-pallet>>.
-. Klicke auf icon:add[set=material] *Palette erstellen*. +
+. Klicke auf material:add[] *Palette erstellen*. +
 → Die Palette wird erstellt.
 
 [[table-create-new-pallet]]
@@ -316,10 +316,10 @@ Palette konfigurieren:
 . Suche den Auftrag anhand der Filtereinstellungen. Beachte dazu die Erläuterungen in <<#search-orders, Aufträge suchen>>. +
 → Die Aufträge, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen.
-. Setze links neben der Palette, die du konfigurieren möchtest, ein Häkchen (icon:check_box[set=material, role=skyBlue]).
-. Klicke anschließend oben auf die weiteren Optionen (icon:more_vert[set=material]).
-. Wähle die Option icon:settings[set=material] *Palette konfigurieren*. +
-*_Oder:_* Klicke links in der Seitennavigation auf die weiteren Optionen (icon:more_vert[set=material]) und wähle die Option icon:settings[set=material] *Palette konfigurieren*. +
+. Setze links neben der Palette, die du konfigurieren möchtest, ein Häkchen (material:check_box[role=skyBlue]).
+. Klicke anschließend oben auf die weiteren Optionen (material:more_vert[]).
+. Wähle die Option material:settings[] *Palette konfigurieren*. +
+*_Oder:_* Klicke links in der Seitennavigation auf die weiteren Optionen (material:more_vert[]) und wähle die Option material:settings[] *Palette konfigurieren*. +
 → Das Fenster *Palette konfigurieren* wird geöffnet.
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<#table-create-new-pallet>>. +
 . Klicke auf *Palette konfigurieren*. +
@@ -337,12 +337,12 @@ Palette schließen:
 . Suche den Auftrag anhand der Filtereinstellungen. Beachte dazu die Erläuterungen in <<#search-orders, Aufträge suchen>>. +
 → Die Aufträge, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen.
-. Setze links neben der Palette, die du schließen möchtest, ein Häkchen (icon:check_box[set=material, role=skyBlue]).
-. Klicke anschließend oben auf die weiteren Optionen (icon:more_vert[set=material]).
-. Wähle die Option icon:lock[set=material] *Palette schließen*. +
-*_Oder:_* Klicke links in der Seitennavigation auf die weiteren Optionen (icon:more_vert[set=material]) und wähle die Option icon:lock[set=material] *Palette schließen*. +
+. Setze links neben der Palette, die du schließen möchtest, ein Häkchen (material:check_box[role=skyBlue]).
+. Klicke anschließend oben auf die weiteren Optionen (material:more_vert[]).
+. Wähle die Option material:lock[] *Palette schließen*. +
+*_Oder:_* Klicke links in der Seitennavigation auf die weiteren Optionen (material:more_vert[]) und wähle die Option material:lock[] *Palette schließen*. +
 → Das Fenster *Palette schließen* wird geöffnet.
-. Wenn du sicher bist, dass du die Palette schließen möchtest, klicke auf icon:lock[set=material] *Palette schließen*. +
+. Wenn du sicher bist, dass du die Palette schließen möchtest, klicke auf material:lock[] *Palette schließen*. +
 → Die Palette wird geschlossen.
 
 [NOTE]
@@ -363,12 +363,12 @@ Palette löschen:
 . Suche den Auftrag anhand der Filtereinstellungen. Beachte dazu die Erläuterungen in <<#search-orders, Aufträge suchen>>. +
 → Die Aufträge, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen.
-. Setze links neben der Palette, die du löschen möchtest, ein Häkchen (icon:check_box[set=material, role=skyBlue]).
-. Klicke anschließend oben auf die weiteren Optionen (icon:more_vert[set=material]).
-. Wähle die Option icon:delete[set=material] *Palette löschen*. +
-*_Oder:_* Klicke links in der Seitennavigation auf die weiteren Optionen (icon:more_vert[set=material]) und wähle die Option icon:delete[set=material] *Palette löschen*. +
+. Setze links neben der Palette, die du löschen möchtest, ein Häkchen (material:check_box[role=skyBlue]).
+. Klicke anschließend oben auf die weiteren Optionen (material:more_vert[]).
+. Wähle die Option material:delete[] *Palette löschen*. +
+*_Oder:_* Klicke links in der Seitennavigation auf die weiteren Optionen (material:more_vert[]) und wähle die Option material:delete[] *Palette löschen*. +
 → Das Fenster *Palette löschen* wird geöffnet.
-. Wenn du sicher bist, dass du die Palette löschen möchtest, klicke auf icon:delete[set=material] *Palette löschen*. +
+. Wenn du sicher bist, dass du die Palette löschen möchtest, klicke auf material:delete[] *Palette löschen*. +
 → Die Palette wird gelöscht.
 
 [#work-with-packages]
@@ -388,12 +388,12 @@ Paket erstellen:
 . Suche den Auftrag anhand der Filtereinstellungen. Beachte dazu die Erläuterungen in <<#search-orders, Aufträge suchen>>. +
 → Die Aufträge, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen.
-. Klicke oben auf icon:add[set=material] *Inhalt hinzufügen*.
+. Klicke oben auf material:add[] *Inhalt hinzufügen*.
 . Wähle die Option *Paket erstellen*. +
 → Das Fenster *Neues Paket erstellen* wird geöffnet. +
-*_Oder:_* Klicke links in der Navigation neben dem Auftrag auf die weiteren Optionen (icon:more_vert[set=material]) und wähle die Option icon:add[set=material] *Transporteinheit erstellen* > icon:add[set=material] *Paket erstellen*.
+*_Oder:_* Klicke links in der Navigation neben dem Auftrag auf die weiteren Optionen (material:more_vert[]) und wähle die Option material:add[] *Transporteinheit erstellen* > material:add[] *Paket erstellen*.
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<#table-create-new-package>>.
-. Klicke auf icon:add[set=material] *Paket erstellen*. +
+. Klicke auf material:add[] *Paket erstellen*. +
 → Das Paket wird erstellt.
 
 
@@ -432,14 +432,14 @@ Artikel verpacken:
 → Die Aufträge, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen.
 . Klicke auf das Paket, um die Artikel anzuzeigen.
-. Setze links im Bereich *Unverpackte Artikel* ein Häkchen (icon:check_box[set=material, role=skyBlue]) neben den Artikeln, die du dem Paket hinzufügen möchtest.
-. Klicke auf *Artikel zum Paket hinzufügen* (icon:add[set=material]). +
+. Setze links im Bereich *Unverpackte Artikel* ein Häkchen (material:check_box[role=skyBlue]) neben den Artikeln, die du dem Paket hinzufügen möchtest.
+. Klicke auf *Artikel zum Paket hinzufügen* (material:add[]). +
 → Die Artikel werden in den Bereich *Verpackte Artikel* verschoben und somit dem Paket hinzugefügt.
 
 [TIP]
 .Verpackte Artikel aus Paket entfernen
 ======
-Möchtest du Artikel aus einem Paket wieder entfernen, setze neben den Artikeln im Bereich *Verpackte Artikel* ein Häkchen (icon:check_box[set=material, role=skyBlue]) und klicke auf *Artikel aus dem Paket entfernen* (icon:delete[set=material]). Klicke anschließend auf icon:delete[set=material] *Entfernen*, um die Artikel aus dem Paket zu entfernen.
+Möchtest du Artikel aus einem Paket wieder entfernen, setze neben den Artikeln im Bereich *Verpackte Artikel* ein Häkchen (material:check_box[role=skyBlue]) und klicke auf *Artikel aus dem Paket entfernen* (material:delete[]). Klicke anschließend auf material:delete[] *Entfernen*, um die Artikel aus dem Paket zu entfernen.
 ======
 
 [#edit-items]
@@ -474,13 +474,13 @@ Paket auf Palette stellen:
 . Suche den Auftrag anhand der Filtereinstellungen. Beachte dazu die Erläuterungen in <<#search-orders, Aufträge suchen>>. +
 → Die Aufträge, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen.
-. Setze neben dem Paket, das du auf eine Palette stellen möchtest, ein Häkchen (icon:check_box[set=material, role=skyBlue]). +
+. Setze neben dem Paket, das du auf eine Palette stellen möchtest, ein Häkchen (material:check_box[role=skyBlue]). +
 *_Tipp:_* Du kannst auch mehrere Pakete auf einmal wählen und diese gesammelt auf eine Palette stellen.
-. Klicke anschließend oben auf die weiteren Optionen (icon:more_vert[set=material]).
-. Wähle die Option icon:table_rows[set=material] *Paket auf Palette stellen*. +
+. Klicke anschließend oben auf die weiteren Optionen (material:more_vert[]).
+. Wähle die Option material:table_rows[] *Paket auf Palette stellen*. +
 → Das Fenster *Paket auf Palette stellen* wird geöffnet.
 . Wähle die ID der Palette aus der Dropdown-Liste oder wähle die Option *Neue Palette erstellen*. +
-. Klicke auf icon:table_rows[set=material] *Paket auf Palette stellen*. +
+. Klicke auf material:table_rows[] *Paket auf Palette stellen*. +
 → Das Paket wird auf die gewählte Palette gestellt.
 
 
@@ -496,15 +496,15 @@ Schnelles Packen verwenden:
 . Suche den Auftrag anhand der Filtereinstellungen. Beachte dazu die Erläuterungen in <<#search-orders, Aufträge suchen>>. +
 → Die Aufträge, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen.
-. Setze neben dem Paket oder der Palette, für die du das Schnelle Packen verwenden möchtest, ein Häkchen (icon:check_box[set=material, role=skyBlue]). +
+. Setze neben dem Paket oder der Palette, für die du das Schnelle Packen verwenden möchtest, ein Häkchen (material:check_box[role=skyBlue]). +
 *_Tipp:_* Du kannst auch mehrere Pakete, mehrere Paletten oder eine Kombination aus Paketen und Paletten für das Schnelle Packen wählen.
-. Klicke auf die weiteren Optionen (icon:more_vert[set=material]).
-. Wähle die Option icon:dynamic_feed[set=material] *Schnelles Packen*. +
+. Klicke auf die weiteren Optionen (material:more_vert[]).
+. Wähle die Option material:dynamic_feed[] *Schnelles Packen*. +
 → Das Fenster *Schnelles Packen* wird geöffnet.
-. Klappe links die Artikeleinstellungen auf (icon:chevron_right[set=material]).
+. Klappe links die Artikeleinstellungen auf (material:chevron_right[]).
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<#table-quick-packing>>. +
 *_Hinweis:_* Gibt es eine Restmenge an Artikeln, die nicht verpackt werden kann, kannst du wählen, ob die übrigen Artikel in ein weiteres Paket gepackt werden sollen, oder ob du die Artikel unverpackt lassen möchtest.
-. Klicke anschließend auf icon:add[set=material, role=green] *Hinzufügen*. +
+. Klicke anschließend auf material:add[role=green] *Hinzufügen*. +
 → Die Artikel werden den Einstellungen entsprechend gepackt.
 
 [[table-quick-packing]]
@@ -553,7 +553,7 @@ Scan-Typ ändern:
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen.
 . Klicke auf ein Paket. +
 → Die im Paket enthaltenen Artikel werden angezeigt.
-. Klicke oben rechts auf *Scan-Typ ändern* (icon:settings[set=material]).
+. Klicke oben rechts auf *Scan-Typ ändern* (material:settings[]).
 . Wähle eine der verfügbaren Optionen. +
 → Der Scan-Typ wird den Einstellungen entsprechend angepasst.
 
@@ -569,13 +569,13 @@ Paket konfigurieren:
 . Suche den Auftrag anhand der Filtereinstellungen. Beachte dazu die Erläuterungen in <<#search-orders, Aufträge suchen>>. +
 → Die Aufträge, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen.
-. Setze links neben dem Paket, das du konfigurieren möchtest, ein Häkchen (icon:check_box[set=material, role=skyBlue]).
-. Klicke anschließend oben auf die weiteren Optionen (icon:more_vert[set=material]).
-. Wähle die Option icon:settings[set=material] *Paket konfigurieren*. +
-*_Oder:_* Klicke links in der Seitennavigation auf die weiteren Optionen (icon:more_vert[set=material]) und wähle die Option icon:settings[set=material] *Paket konfigurieren*. +
+. Setze links neben dem Paket, das du konfigurieren möchtest, ein Häkchen (material:check_box[role=skyBlue]).
+. Klicke anschließend oben auf die weiteren Optionen (material:more_vert[]).
+. Wähle die Option material:settings[] *Paket konfigurieren*. +
+*_Oder:_* Klicke links in der Seitennavigation auf die weiteren Optionen (material:more_vert[]) und wähle die Option material:settings[] *Paket konfigurieren*. +
 → Das Fenster *Paket konfigurieren* wird geöffnet.
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<#table-configure-package>>. +
-. Klicke auf icon:settings[set=material] *Paket konfigurieren*. +
+. Klicke auf material:settings[] *Paket konfigurieren*. +
 → Das Paket wird deinen Eingaben entsprechend konfiguriert.
 
 [[table-configure-package]]
@@ -608,12 +608,12 @@ Paket schließen:
 . Suche den Auftrag anhand der Filtereinstellungen. Beachte dazu die Erläuterungen in <<#search-orders, Aufträge suchen>>. +
 → Die Aufträge, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen.
-. Setze links neben dem Paket, das du schließen möchtest, ein Häkchen (icon:check_box[set=material, role=skyBlue]).
-. Klicke anschließend oben auf die weiteren Optionen (icon:more_vert[set=material]).
-. Wähle die Option icon:lock[set=material] *Paket schließen*. +
-*_Oder:_* Klicke links in der Seitennavigation auf die weiteren Optionen (icon:more_vert[set=material]) und wähle die Option icon:lock[set=material] *Paket schließen*. +
+. Setze links neben dem Paket, das du schließen möchtest, ein Häkchen (material:check_box[role=skyBlue]).
+. Klicke anschließend oben auf die weiteren Optionen (material:more_vert[]).
+. Wähle die Option material:lock[] *Paket schließen*. +
+*_Oder:_* Klicke links in der Seitennavigation auf die weiteren Optionen (material:more_vert[]) und wähle die Option material:lock[] *Paket schließen*. +
 → Das Fenster *Paket schließen* wird geöffnet.
-. Wenn du sicher bist, dass du das Paket schließen möchtest, klicke auf icon:lock[set=material] *Paket schließen*. +
+. Wenn du sicher bist, dass du das Paket schließen möchtest, klicke auf material:lock[] *Paket schließen*. +
 → Das Paket wird geschlossen.
 
 [NOTE]
@@ -634,12 +634,12 @@ Paket löschen:
 . Suche den Auftrag anhand der Filtereinstellungen. Beachte dazu die Erläuterungen in <<#search-orders, Aufträge suchen>>. +
 → Die Aufträge, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen.
-. Setze links neben dem Paket, das du löschen möchtest, ein Häkchen (icon:check_box[set=material, role=skyBlue]).
-. Klicke anschließend oben auf die weiteren Optionen (icon:more_vert[set=material]).
-. Wähle die Option icon:delete[set=material] *Paket löschen*. +
-*_Oder:_* Klicke links in der Seitennavigation auf die weiteren Optionen (icon:more_vert[set=material]) und wähle die Option icon:delete[set=material] *Paket löschen*. +
+. Setze links neben dem Paket, das du löschen möchtest, ein Häkchen (material:check_box[role=skyBlue]).
+. Klicke anschließend oben auf die weiteren Optionen (material:more_vert[]).
+. Wähle die Option material:delete[] *Paket löschen*. +
+*_Oder:_* Klicke links in der Seitennavigation auf die weiteren Optionen (material:more_vert[]) und wähle die Option material:delete[] *Paket löschen*. +
 → Das Fenster *Paket löschen* wird geöffnet.
-. Wenn du sicher bist, dass du das Paket löschen möchtest, klicke auf icon:delete[set=material] *Paket löschen*. +
+. Wenn du sicher bist, dass du das Paket löschen möchtest, klicke auf material:delete[] *Paket löschen*. +
 → Das Paket wird gelöscht.
 
 [#close-orders]
@@ -655,14 +655,14 @@ Aufträge schließen:
 → Die Aufträge, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen. +
 → Der Auftrag wird links in der Navigation angezeigt.
-. Klicke auf die weiteren Optionen (icon:more_vert[set=material]).
-. Wähle die Option icon:lock[set=material] *Auftrag schließen*. +
+. Klicke auf die weiteren Optionen (material:more_vert[]).
+. Wähle die Option material:lock[] *Auftrag schließen*. +
 → Das Fenster *Auftrag schließen* wird geöffnet.
-. Wenn du dir sicher bist, dass du den Auftrag schließen möchtest, klicke auf icon:lock[set=material] *Auftrag schließen*. +
+. Wenn du dir sicher bist, dass du den Auftrag schließen möchtest, klicke auf material:lock[] *Auftrag schließen*. +
 → Der Auftrag wird geschlossen.
 
 [NOTE]
 .Anmeldung von Aufträgen ohne Schließen möglich
 ====
-Aufträge müssen nicht geschlossen sein, um sie im Versand-Center 2.0 anzumelden.
+Aufträge müssen _nicht_ geschlossen sein, um sie im xref:fulfillment:versand-center-2-0.adoc#[Versand-Center 2.0] anzumelden.
 ====
