FIX a few issues noticed for go-live

--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -62,6 +62,7 @@
 *** xref:artikel:artikel-manuell-anlegen.adoc[Artikel und Varianten manuell anlegen]
 *** xref:artikel:detailansicht.adoc[Detailansicht: Gestaltung]
 *** xref:artikel:verzeichnis.adoc[Detailansicht: Verzeichnis der Datenfelder]
+*** xref:artikel:group-functions.adoc[Massenbearbeitung]
 * xref:warenwirtschaft:warenwirtschaft.adoc[Waren]
 ** xref:warenwirtschaft:preparation.adoc[Vorbereitende Einstellungen]
 *** xref:warenwirtschaft:lager-einrichten.adoc[Lager planen]
