--- a/docs/de-de/modules/artikel/pages/artikelsuche.adoc
+++ b/docs/de-de/modules/artikel/pages/artikelsuche.adoc
@@ -364,6 +364,10 @@ Die einzelne Variante wird gelöscht.
 
 !===
 
+| material:layers[role="darkGrey"]
+|Öffnet die Gruppenfunktionen.
+xref:artikel:group-functions.adoc#[Weitere Informationen].
+
 | *Ergebnisse pro Seite*
 |Hier siehst du die Gesamtzahl der Suchergebnisse und die Anzahl der Ergebnisse pro Seite.
 
